--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: 'Login to Docker hub'
-        run: docker login --username youssef1001 --password dckr_pat_Mz0s7rxp82yixy57bJfONtwt0Gw
+        run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
 
       - name: 'Testing Github actions'
         run: pwd
